--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
                         <i class="fas fa-folder-open"></i>
                         <span>Sessions</span>
                     </a>
+                    <a href="/session_history.html" class="nav-link">
+                        <i class="fas fa-history"></i>
+                        <span>History</span>
+                    </a>
                     <a href="#analytics" class="nav-link">
                         <i class="fas fa-chart-bar"></i>
                         <span>Analytics</span>
